welcome.lessons.welcome.variables.Variables.scala.error
Variables:4: error: not found: value nbPad
  nbPad = nbPas + 1
  ^Variables:6: error: not found: value prendsBiscuit
prendsBiscuit()
^